added projects to portfolio using project component

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,8 @@
 .footer {
-  min-height: 100px;
+  min-height: 200px;
   background: #E5E5E5;
   position: relative;
+  text-align: center;
 }
 
 .footer span {
