--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -17,10 +17,14 @@ footer i {
   margin-left: 1em;
 }
 
-a, a:focus, a:hover {
-  font-family: 'Roboto', sans-serif;
+footer a:focus, footer a:hover {
+  
   color: rgb(255, 217, 0);
   text-decoration: none;
+}
+footer a {
+  font-family: 'Roboto', sans-serif;
+  color: white;
 }
 
 /* copyright section */
@@ -35,6 +39,7 @@ footer i, i {
   color: white;
 }
 
+/* Footer style */
 .box-shadow-style {
   /* background-color: #61892F; */
   color: white;
