--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -12,16 +12,59 @@
 
 .window-mode h5 {
     text-align: center;
+    margin: auto;
     font-weight: bold;
     border-bottom: 1px solid rgb(169, 173, 163);
     padding-bottom: 0.5rem;
 }
 
 .portfolio-image {
-    width: 100%;
+    width: 80%;
     padding: 1rem;
+}
+
+.portfolio {
+    width: 100%;
+    padding-left: 20%;
 }
 
 .project-links {
     text-align: center;
+}
+
+.project-links a:focus, .project-links a:hover {
+  
+    color: rgb(255, 217, 0);
+    text-decoration: none;
+  }
+
+.project-links a {
+    font-family: 'Roboto', sans-serif;
+    color: black;
+  }
+
+img {
+    -webkit-filter: grayscale(90%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(90%); 
+}
+
+img:hover {    
+    animation-name: stretch;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+    /* animation-iteration-count: infinite; */
+}
+
+@keyframes stretch {
+    0% {
+        transform: scale(1);
+        -webkit-filter: grayscale(90%); /* Safari 6.0 - 9.0 */
+        filter: grayscale(90%); 
+    }
+
+    100% {
+        transform: scale(1.1);
+        -webkit-filter: grayscale(10%); /* Safari 6.0 - 9.0 */
+        filter: grayscale(10%);
+    }
 }
