added Page Header to main pages

--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -2,4 +2,20 @@
   min-height: 100%;
   padding-bottom: 100px;
   padding-top: 5em;
+  font-family: 'Roboto', sans-serif;
+}
+
+a:focus, a:hover {
+  
+  color: rgb(255, 217, 0);
+  text-decoration: none;
+}
+a {
+  font-family: 'Roboto', sans-serif;
+  color: black;
+}
+
+i {
+  color: black;
+  margin-right: 0.5em;
 }
