--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,3 +1,9 @@
+.navbar-header img {
+    border-radius: 50%;
+    width: 2.5rem;
+    padding-right: 0.5rem;
+}
+
 @media screen and (min-width: 576px) {
     #collapsibleNavbar {
         margin-left: 500px;
