--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -43,12 +43,12 @@
     color: black;
   }
 
-img {
+.portfolio img {
     -webkit-filter: grayscale(90%); /* Safari 6.0 - 9.0 */
     filter: grayscale(90%); 
 }
 
-img:hover {    
+.portfolio img:hover {    
     animation-name: stretch;
     animation-duration: 0.5s;
     animation-fill-mode: forwards;
