--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,7 +2,7 @@ footer {
   color: rgb(160, 160, 160);
   text-align: center;
   background-color: #3f3f3f;
-  margin: auto;
+  /* margin: auto; */
   margin-top: 20px;
   padding-top: 10px;
   height: 50px;
