--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 .grad-bg {
-    background: repeating-linear-gradient(#EEE, #FFF 1px);
-    /* background-size: 400% 400%; */
-    /* animation: change 20s ease-in-out infinite; */
+    background-image: radial-gradient(circle at 11% 62%, rgba(205, 205, 205,0.04) 0%, rgba(205, 205, 205,0.04) 50%,rgba(149, 149, 149,0.04) 50%, rgba(149, 149, 149,0.04) 100%),radial-gradient(circle at 78% 10%, rgba(49, 49, 49,0.04) 0%, rgba(49, 49, 49,0.04) 50%,rgba(254, 254, 254,0.04) 50%, rgba(254, 254, 254,0.04) 100%),radial-gradient(circle at 92% 43%, rgba(34, 34, 34,0.04) 0%, rgba(34, 34, 34,0.04) 50%,rgba(206, 206, 206,0.04) 50%, rgba(206, 206, 206,0.04) 100%),linear-gradient(329deg, rgb(241, 77, 33),rgb(218, 227, 61));
+    /* background: repeating-linear-gradient(#EEE 1px, #FFF 1px); */
+    /* background-size: 150% 150%; */
+    /* animation: change 10s ease-in-out infinite; */
 }
 
 /* @keyframes change {
