--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -23,7 +23,8 @@
 
 .image-holder {
     padding: 0rem 0.5rem 0.5rem 0rem; 
-    margin-bottom: 0.5rem;   
+    margin-bottom: 0.5rem;
+    width: 100%; 
 }
 
 .poem {
