--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -2,7 +2,7 @@
   min-height: 100%;
   padding-bottom: 100px;
   padding-top: 5em;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Oxygen', sans-serif;
 }
 
 a:focus, a:hover {
