solved the routing of the app for github pages using HashRouter instead of BrowserRouter

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -68,5 +68,6 @@
 /* *****************************  */
 
 .image-text p {
-    text-align: distribute;
+    text-align: justify;
+    hyphens: auto;
 }
