--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -4,6 +4,7 @@
     border-bottom: 1px solid rgb(110, 110, 110);
 }
 
+/* map looks smaller in smaller devices */
 @media screen and (min-width: 576px) {
     .large iframe{
         width: 25em;
